src/tests/snapshots/ir2ast__deconflict.snap
---
created: "2019-03-31T23:33:24.647659100Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    var x = 1;\n    var x$1 = 1;\n    (function() {\n        var x = 1;\n    })\n"
---
var x = void 0;
var x$1 = void 0;
x = 1;
x$1 = 1;
function() {
    var x$1$1 = void 0;
    x$1$1 = 1;
};

