src/tests/snapshots/ir2ast__deconflict_for_in.snap
---
created: "2019-04-05T14:49:37.742870900Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    {\n        const x;\n    }\n    for (x in 1);\n"
---
var x$1;
for(var _for in 1){
    x = _for;
}

