src/tests/snapshots/ir2ast__deconflict_globals.snap
---
created: "2019-04-10T00:24:54.061171300Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    var x = 1;\n    (function() {\n        var x = 1;\n        x$1;\n        x$2;\n    })\n"
---
var x;
x = 1;
(function() {
    var x$1$1;
    x$1$1 = 1;
    x$1;
    x$2;
});

