src/tests/snapshots/ir2ast__deep_scopes.snap
---
created: "2019-04-10T00:24:54.071183100Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    var x = 1;\n    (function() {\n        (function() {\n            x = 2;\n        });\n    });\n"
---
var x;
x = 1;
(function() {
    (function() {
        x = 2;
        2;
    });
});

