src/tests/snapshots/ir2ast__empty_blocks.snap
---
created: "2019-03-31T23:33:24.652650400Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    if (x) {\n        log();\n    } else {}\n\n    try { log() } catch {} finally {}\n\n    try { log() } catch {} finally { log() }\n"
---
if (x) {
    log();
}
try {
    log();
} catch () {
}
try {
    log();
} finally{
    log();
}

