src/tests/snapshots/ir2ast__labels.snap
---
created: "2019-04-07T06:35:52.849964400Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    outer: for (;;) {\n        inner: for (;;) {\n            if (foo) continue inner;\n            if (bar) break outer;\n        }\n    }\n"
---
outer: {
    for(;;){
        inner: {
            for(;;){
                if (foo) {
                    continue inner;
                }
                if (bar) {
                    break outer;
                }
            }
        }
    }
}

