src/tests/snapshots/ir2ast__no_void_0_initializer.snap
---
created: "2019-04-05T14:49:37.883499200Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    var x;\n    let y;\n"
---
var x;
x = void 0;
var y;

