src/tests/snapshots/ir2ast__object_props.snap
---
created: "2019-04-06T05:47:31.976201700Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    var obj = {\n        x: 1,\n        ['bad>']: 2,\n        0: 7,\n    };\n    obj.y = 3;\n    obj['#bad'] = 4;\n    obj.z;\n    obj['%bad'];\n    delete obj.w;\n    delete obj['^bad'];\n"
---
var obj;
obj = {
    x: 1,
    'bad>': 2,
    0: 7
};
obj.y = 3;
3;
obj['#bad'] = 4;
4;
obj.z;
obj['%bad'];
delete obj.w;
delete obj['^bad'];

