src/tests/snapshots/ir2ast__regex_has_escape_behavior.snap
---
created: "2019-04-04T18:42:26.929952900Z"
creator: insta@0.7.1
source: src/tests/ir2ast.rs
expression: "\n    /foo/;\n    /bar\\./;\n    /ba\\/z/;\n"
---
/foo/;
/bar\./;
/ba\/z/;

